<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:text="@string/session_end"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_3sdp"
        android:layout_below="@id/title"
        android:background="@color/golden_60"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:padding="@dimen/_15sdp"
        android:text="@string/login_again"
        android:textSize="@dimen/_12sdp"/>

    <Button
        android:id="@+id/btn_okay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content"
        android:padding="@dimen/_5sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/golden_60"
        android:text="@string/okay"
        android:textSize="@dimen/_14sdp"/>

</RelativeLayout>