<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.b2gsoft.jamalpurqrscanner.View.CouponInfoActivity">

    <ScrollView
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />

            <ImageView
                android:id="@+id/product_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center"
                android:visibility="visible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/concert_one"
                    android:padding="@dimen/_10sdp"
                    android:text="Kohinoor"
                    android:background="@color/golden"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="normal" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black_20"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:fontFamily="@font/cairo_light"
                    android:text="@string/batch_no"
                    android:textColor="@color/black_40"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/product_batch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/patua_one"
                    android:text="X55"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black_20"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/coupon"
                    android:fontFamily="@font/cairo_light"
                    android:textColor="@color/black_40"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/coupon_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/patua_one"
                    android:text="Q68vi7y44"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black_20"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:fontFamily="@font/cairo_light"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/expiry_date"
                    android:textColor="@color/black_40"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/expiry_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/patua_one"
                    android:text="28/8/2025"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black_20"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/offer2"/>

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/concert_one"
                    android:gravity="center"
                    android:padding="@dimen/_20sdp"
                    android:text="৳ 50"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_23sdp" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:visibility="visible"
        android:layout_gravity="center"
        android:src="@drawable/loading"/>

</LinearLayout>
